Closed Bug 1714944 Opened 4 years ago Closed 4 years ago

Crash in [@ nsDisplayTransform::Collect3DTransformLeaves]

Categories

(Core :: Web Painting, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- wontfix
firefox91 --- fixed

People

(Reporter: gsvelto, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/e425f697-ba8f-4a4a-84ed-5e6b90210605

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(item->GetType() == DisplayItemType::TYPE_TRANSFORM)

Top 10 frames of crashing thread:

0 xul.dll nsDisplayTransform::Collect3DTransformLeaves layout/painting/nsDisplayList.cpp:8297
1 xul.dll nsDisplayTransform::CollectSorted3DTransformLeaves layout/painting/nsDisplayList.cpp:8324
2 xul.dll nsDisplayTransform::Paint layout/painting/nsDisplayList.cpp:8371
3 xul.dll nsDisplayTransform::Paint layout/painting/nsDisplayList.cpp:8363
4 xul.dll nsDisplayList::Paint layout/painting/nsDisplayList.cpp:2453
5 xul.dll nsDisplayTransform::Paint layout/painting/nsDisplayList.cpp:8394
6 xul.dll nsDisplayTransform::Paint layout/painting/nsDisplayList.cpp:8363
7 xul.dll nsDisplayList::Paint layout/painting/nsDisplayList.cpp:2453
8 xul.dll nsDisplayList::PaintRoot layout/painting/nsDisplayList.cpp:2496
9 xul.dll static nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:3492

This crash seems to have been introduced by bug 1540737. Matt can you have a look please?

Severity: -- → S2

Set release status flags based on info from the regressing bug 1540737

Flags: needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED

I haven't been able to reproduce this using the URLs from crash reports.

The attached patch fixes the most likely cause, and changes the behaviour to log more info for nightly/beta and not crash in release.

Flags: needinfo?(matt.woodrow)

:miko, can you review the patch?

Flags: needinfo?(mikokm)

(In reply to Marco Castelluccio [:marco] from comment #4)

:miko, can you review the patch?

Sorry for the delay, I had completely missed this. Review done.

Flags: needinfo?(mikokm)
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/239fe77a8037 Flatten away wrapper items while collecting 3D transform leaves. r=miko
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Is this worth uplifting to beta? Today (90.0b12) is the last build before the release candidate.

Flags: needinfo?(matt.woodrow)

Apologies, didn't see this before I went away. This seems rare, so should be ok to ride the trains.

Flags: needinfo?(matt.woodrow)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: