Bug 1714944 - Flatten away wrapper items while collecting 3D transform leaves. r=miko

Differential Revision: https://phabricator.services.mozilla.com/D117491